objects/QualificationProcessStageLog__c.object
<CustomObject>
    <description>Inserts a record when a Process Stage on the Program Qualification or a Program Category Qualification changes.</description>
    <fields>
        <fullName>ProcessStageDate__c</fullName>
        <label>Process Stage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Stage</label>
        <referenceTo>QualificationProcessStage__c</referenceTo>
        <relationshipLabel>Qualification Process Stage Logs</relationshipLabel>
        <relationshipName>QualificationProcessStageLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramCategoryQualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Category Qualification</label>
        <referenceTo>ProgramCategoryQualification__c</referenceTo>
        <relationshipLabel>Qualification Process Stage Logs</relationshipLabel>
        <relationshipName>QualificationProcessStageLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramQualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Qualification</label>
        <referenceTo>ProgramQualification__c</referenceTo>
        <relationshipLabel>Qualification Process Stage Logs</relationshipLabel>
        <relationshipName>QualificationProcessStageLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QualificationProcessStageLogEID__c</fullName>
        <externalId>true</externalId>
        <label>Qualification Process Stage Log EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Readiness__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Readiness</label>
        <referenceTo>QualificationReadiness__c</referenceTo>
        <relationshipLabel>Qualification Process Stage Logs</relationshipLabel>
        <relationshipName>QualificationProcessStageLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Qualification Process Stage Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Qualification Process Stage Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Process Stage Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NullCheck</fullName>
        <active>true</active>
        <description>One parent foreign key fields must be null and one must be not null</description>
        <errorConditionFormula>or(and(not(isblank( ProgramQualification__c )),not(isblank( ProgramCategoryQualification__c))),and(isblank( ProgramQualification__c ),isblank( ProgramCategoryQualification__c )
)
)</errorConditionFormula>
        <errorMessage>You must supply either a &quot;Program Category Qualification&quot; or a &quot;Program Qualification,&quot; but not both. You see, we can only track one of these at a time.</errorMessage>
    </validationRules>
</CustomObject>